<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.searchIt.androidsearchit.MainActivity" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <LinearLayout 
        android:id="@+id/layout"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/background_material_light">
        
        <EditText 
    	    android:id="@+id/username"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	      	android:background="@drawable/edittext_top_bg"
	      	android:layout_marginTop="15dp"
	        android:padding="10dp"
	        android:hint="@string/user"
	        android:inputType="text"
	        android:textColorHint="#bbbbbb" />
        
        <EditText 
            android:id="@+id/emailId"
            android:layout_marginTop="20dp"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	      	android:background="@drawable/edittext_top_bg"
	      	android:padding="10dp"
	      	android:inputType="textEmailAddress"
	        android:hint="@string/email"
	        android:textColorHint="#bbbbbb" />
        
        <EditText 
            android:id="@+id/phoneNumber"
            android:layout_marginTop="25dp"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	      	android:background="@drawable/edittext_top_bg"
	      	android:inputType="phone"
	      	android:padding="10dp"
	        android:hint="@string/phone"
	        android:textColorHint="#bbbbbb" />
        
        <EditText 
            android:id="@+id/password"
            android:layout_marginTop="25dp"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	      	android:background="@drawable/edittext_top_bg"
	      	android:padding="10dp"
	      	android:inputType="textPassword"
	        android:hint="@string/password"
	        android:textColorHint="#bbbbbb" />
        
     </LinearLayout>

     <CheckBox
         android:id="@+id/isprovider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout"
         android:layout_marginLeft="18dp"
         android:checked="false"
         android:gravity="center" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/isprovider"
         android:layout_alignBottom="@+id/isprovider"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="@string/service"
         android:textColor="#000000"
         android:textSize="20sp" />

     <Button
         android:id="@+id/btnSingIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/isprovider"
         android:layout_centerHorizontal="true"
         android:layout_margin="4dp"
         android:layout_marginTop="34dp"
         android:padding="10dp"
         android:text="@string/sign_up" />

 </RelativeLayout>