<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />
    
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@color/background_material_light"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp" >
        
	  <EditText 
    	    android:id="@+id/user_email"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	      	android:background="@drawable/edittext_top_bg"
	      	android:layout_marginTop="15dp"
	        android:padding="10dp"
	        android:textColor="#000000"
	        android:hint="@string/user"
	        android:inputType="text"
	        android:textColorHint="#bbbbbb" />
	  
	  
	  <EditText 
            android:id="@+id/user_password"
            android:layout_marginTop="20dp"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	      	android:background="@drawable/edittext_top_bg"
	      	android:padding="10dp"
	      	android:inputType="textPassword"
	      	android:textColor="#000000"
	        android:hint="@string/email"
	        android:textColorHint="#bbbbbb" />
	  
	 </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout"
        android:layout_marginTop="10dp"
        android:background="@color/background_material_light"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:text="Forgot Password"
            android:textColor="#000000"
            android:textSize="15dp" />

    </LinearLayout>

     <Button
         android:id="@+id/eidt_profile_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/layout1"
         android:layout_marginTop="38dp"
         android:padding="10dp"
         android:text="@string/login" />
    
</RelativeLayout>
